# gemini-image-generator

./: .env.example  .gitignore  CHANGELOG.md  COMPREHENSIVE_AUDIT_REPORT.md  CREATE_GITHUB_REPO.md  FINAL_AUDIT_REPORT.md  LICENSE  PUSH_TO_GITHUB.md  README.md  SOLVE_RELEASE_ISSUE.md  main.py  manifest.yaml  pyproject.toml  requirements.txt
definitions/: gemini_image_generator.yaml
docs/: USAGE.md
docs/plans/: 2026-01-26-dify-gemini-image-plugin-design.md  2026-01-26-dify-gemini-image-plugin-implementation.md
gemini_image_generator/: __init__.py  api_client.py  config.py  gemini_image_tool.py  utils.py
provider/: __init__.py  api_client.py  gemini_image.yaml  requirements.txt  templates.py
provider/gemini_image_generator/: __init__.py  api_client.py  config.py  gemini_image_tool.py  provider.py
tests/: __init__.py  test_api_client.py  test_gemini_image_tool.py  test_templates.py
tools/: gemini_generate_image.py  gemini_generate_image.yaml
